crates/plotnik-tests/tests/03-analyze/mutual_recursion/no_escape_via_sequence.txt
A = (foo
  {
    (x)
    (B)
  }
)

B = (bar (A))
------------------ DIAGNOSTICS -------------------
error: infinite recursion: no escape path
 --> query.ptk:8:11
  |
4 |     (B)
  |      - references B (completing cycle)
...
8 | B = (bar (A))
  | ----------^--
  | |         |
  | |         references A
  | B is defined here
  |
help: add an alternative to `A` or `B` that does not reference any definition in this cycle
------------------ DEFINITIONS -------------------
A
  B
    A (cycle)
B
  A
    B (cycle)
